[package]
name = "timpani"
version = "0.1.0-pre"
authors = ["llamachannel <llamachannel@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[dependencies.nom]
version = "6"
features = ["regexp"]
